--- a/substreams.yaml
+++ b/substreams.yaml
@@ -7,7 +7,7 @@ imports:
   sql: https://github.com/streamingfast/substreams-sink-sql/releases/download/protodefs-v1.0.7/substreams-sink-sql-protodefs-v1.0.7.spkg
   database_change: https://github.com/streamingfast/substreams-sink-database-changes/releases/download/v1.3.1/substreams-database-change-v1.3.1.spkg
   system_program_events: https://spkg.io/streamingfast/system-program-events-v0.1.7.spkg
-  frens_events: https://spkg.io/v1/packages/frens_events/v0.1.1
+  frens_events: https://spkg.io/v1/packages/frens_events/v0.1.2
 
 binaries:
   default:
@@ -29,7 +29,9 @@ sink:
   module: block_database_changes
   type: sf.substreams.sink.sql.v1.Service
   config:
-    schema: "./schema.sql"
+    # schema: "./schema.sql"
+    # engine: postgres
+    schema: "./schema.clickhouse.sql"
     engine: clickhouse
     postgraphile_frontend:
       enabled: false
