--- a/substreams.yaml
+++ b/substreams.yaml
@@ -7,11 +7,12 @@ imports:
   sql: https://github.com/streamingfast/substreams-sink-sql/releases/download/protodefs-v1.0.7/substreams-sink-sql-protodefs-v1.0.7.spkg
   database_change: https://github.com/streamingfast/substreams-sink-database-changes/releases/download/v1.3.1/substreams-database-change-v1.3.1.spkg
   system_program_events: https://spkg.io/streamingfast/system-program-events-v0.1.7.spkg
-  frens_events: https://spkg.io/v1/packages/frens_events/v0.1.2
+  frens_events: https://spkg.io/v1/packages/frens_events/v0.1.3
+  solana: https://spkg.io/streamingfast/solana-common-v0.3.0.spkg
 
 binaries:
   default:
-    type: wasm/rust-v1
+    type: wasm/rust-v1+wasm-bindgen-shims
     file: target/wasm32-unknown-unknown/release/frens_clickhouse.wasm
 
 modules:
@@ -19,19 +20,24 @@ modules:
     kind: map
     initialBlock: 374460200
     inputs:
-      - source: sf.solana.type.v1.Block
+      - map: solana:blocks_without_votes
     output:
       type: proto:sf.substreams.sink.database.v1.DatabaseChanges
+    blockFilter:
+      module: solana:program_ids_without_votes
+      query:
+        string: program:LanD8FpTBBvzZFXjTxsAoipkFsxPUCDB4qAqKxYDiNP
 
-network: solana-devnet
+
+network: solana
 
 sink:
   module: block_database_changes
   type: sf.substreams.sink.sql.v1.Service
   config:
-    # schema: "./schema.sql"
-    # engine: postgres
-    schema: "./schema.clickhouse.sql"
-    engine: clickhouse
+    schema: "./schema.sql"
+    engine: postgres
+    # schema: "./schema.clickhouse.sql"
+    # engine: clickhouse
     postgraphile_frontend:
       enabled: false
